--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                       <li><b>•  [Service]</b> Min-Seong served as a Session Chair and on the Organizing Committee for ITC-CSCC 2025.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Commercial Semiconductor Development Technology Workshop (상용반도체개발 기술워크숍).</li>
                       <li>[2025.6] </li>
-                      <li><b>•  [Publication-Journal]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology" has been accepted for publication in the IEEE Journal of Solid-State Circuits (JSSC).</b></u>!
+                      <li><b>•  [Publication-Journal]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology" has been accepted for publication in the IEEE Journal of Solid-State Circuits (JSSC).</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Grant]</b> HPIC Lab were selected for the "Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging" project, sponsored by the Ministry of Science and ICT (MSIT).</b></li>
                       <li>[2025.5] </li>
@@ -347,11 +347,12 @@
                       <li><b>•  [Invited Talk]</b> Prof. Choo presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the 2025 Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Conference.</li>
-                      <li><b>[2025.1]</b> </li>
-                      <li><b>•  [Award]</b> Best Paper Award (Silver Prize), 2025 ICEIC ,Congratulations, <b>Sang-Hyeon.</b></li>
-                      <li><b>•  [Invited Talk]</b> "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design", ICEIC 2025, <b>Min-Seong</b>.</li>
-                      <li><b>•  [OC Member]</b> Organizing Committee, 2025 ICEIC, <b>Min-Seong</b>.
-                      <li><b>Prof. Choo</b> has served as the 상임이사 (차세대 리더 분과) at 대한전자공학회</li>
+                      <li>[2025.1] </li>
+                      <li><b>•  [Award]</b> Sang-Hyeon received the Best Paper Award (Silver Prize) at ICEIC 2025.</b></li>
+                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design" at ICEIC 2025.</li>
+                      <li><b>•  [Service]</b> Min-Seong served as a Session Chair and on the Organizing Committee for ICEIC 2025.</li>
+                      <li><b>•  [Service]</b> Min-Seong served as the Executive Director (상임이사) of the Next-Generation Leader Division at the IEIE.</li>
+                      
                     </ul>
                   </div>
                 </div>
