--- a/index.html
+++ b/index.html
@@ -330,8 +330,8 @@
                       <li><b>•  [Grant]</b> Seung-Mo was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
                       <li><b>•  [Grant]</b> Jae-Geon was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
                       <li>[2025.8] </li>
-                      <li><b>•  [Publication-Conference]</b> A paper entitled "Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC" has been accepted for presentation at the 2025 IEEE Asian Solid-State Circuits Conference (A-SSCC).</li>
-                      <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted for presentation at the 2025 IEEE Asian Solid-State Circuits Conference (A-SSCC).</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).</li>
+                      <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).</li>
                       <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "High-Speed Integrated Circuit Design" at the 2025 SoC Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Workshop.</li>
                       <li>[2025.7] </li>                      
