--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                       <li><b>•  [Grant]</b> HPIC Lab were selected for the "Cryogenic Superconducting Quantum Computer Readout Receiver" project, sponsored by Samsung Electronics.</b></li>         
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL" has been accepted for publication in IEEE Transactions on Very Large Scale Integration (TVLSI) Systems.</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>•  [Invited Talk]</b> Prof. Choo presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the 2025 Analog/Power IC Design Workshop.</li>
+                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the 2025 Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Conference.</li>
                       <li>[2025.1] </li>
