--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                       <li>[2025.10] </li>                        
                       <li><b>•  [Invited Talk]</b> Prof. Seung-Hyeon Moon presented an invited talk entitled "Two Challenges in AI Accelerators," hosted by HPIC Lab.</li>
                       <li><b>•  [Service]</b> Min-Seong served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
-                      <li><b>•  [Award]</b> Min-Seong received the KSIA Award for Contribution to Semiconductor Industry Development (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
+                      <li><b>•  [Award]</b> Min-Seong received the KSIA Award (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Award]</b> Jae-Hyeon received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
                       <li><b>•  [Award]</b> Seung-Hwan received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
@@ -323,9 +323,9 @@
                       <li><b>•  [Service]</b> Min-Seong served on the Organizing Committee for APCCAS 2025.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Organizing Committee for ISOCC 2025.</li>
                       <li>[2025.9] </li>                        
-                      <li><b>•  [Award]</b> Dong-Hyun and Shin-Uk received the Corporate Special Award (Baum Design Systems) at the 26th Korean Semiconductor Design Challenge.</b>
+                      <li><b>•  [Award]</b> Dong-Hyun and Shin-Uk received the Special Award at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
-                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Commissioner of the Korean Intellectual Property Office Award (특허청장상) at the 26th Korean Semiconductor Design Challenge.</b>
+                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Commissioner of the Korean Intellectual Property Office Award at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Grant]</b> Seung-Mo was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
                       <li><b>•  [Grant]</b> Jae-Geon was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
