--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
                       <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Commissioner of the Korean Intellectual Property Office Award at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>•  [Grant]</b> Seung-Mo was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
-                      <li><b>•  [Grant]</b> Jae-Geon was selected as a recipient of the Master's Student Research Grant from the National Research Foundation of Korea (NRF).</b></li>
+                      <li><b>•  [Grant]</b> Seung-Mo was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
+                      <li><b>•  [Grant]</b> Jae-Geon was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
                       <li>[2025.8] </li>
                       <li><b>•  [Publication-Conference]</b> A paper entitled "Critical-Timing-Relaxed pre-Decision Feedforward Equalizer for High-Speed DSP-based Wireline Receiver using Hardware-in-the-Loop Verification on RF-SoC" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).</li>
                       <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).</li>
@@ -336,7 +336,7 @@
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Workshop.</li>
                       <li>[2025.7] </li>                      
                       <li><b>•  [Service]</b> Min-Seong served as a Session Chair and on the Organizing Committee for ITC-CSCC 2025.</li>
-                      <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Commercial Semiconductor Development Technology Workshop (상용반도체개발 기술워크숍).</li>
+                      <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 상용반도체개발 기술워크숍.</li>
                       <li>[2025.6] </li>
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology" has been accepted for publication in the IEEE Journal of Solid-State Circuits (JSSC).</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
@@ -345,13 +345,13 @@
                       <li><b>•  [Grant]</b> HPIC Lab were selected for the "Cryogenic Superconducting Quantum Computer Readout Receiver" project, sponsored by Samsung Electronics.</b></li>         
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL" has been accepted for publication in IEEE Transactions on Very Large Scale Integration (TVLSI) Systems.</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the 2025 Analog/Power IC Design Workshop.</li>
+                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> Min-Seong served on the Program Committee for the 2025 SoC Conference.</li>
                       <li>[2025.1] </li>
                       <li><b>•  [Award]</b> Sang-Hyeon received the Best Paper Award (Silver Prize) at ICEIC 2025.</b></li>
-                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design" at ICEIC 2025.</li>
-                      <li><b>•  [Service]</b> Min-Seong served as a Session Chair and on the Organizing Committee for ICEIC 2025.</li>
+                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design" at ICEIC.</li>
+                      <li><b>•  [Service]</b> Min-Seong served as a Session Chair and on the Organizing Committee for ICEIC.</li>
                       <li><b>•  [Service]</b> Min-Seong served as the Executive Director (상임이사) of the Next-Generation Leader Division at the IEIE.</li>
                       
                     </ul>
