--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                       <li>[2025.9] </li>                        
                       <li><b>•  [Award]</b> Dong-Hyun and Shin-Uk received the Special Award at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
-                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received the Commissioner of the Korean Intellectual Property Office Award at the 26th Korean Semiconductor Design Challenge.</b>
+                      <li><b>•  [Award]</b> Seung-Mo Jin and Dong-Ho Kim received 특허청장상 at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Grant]</b> Seung-Mo was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
                       <li><b>•  [Grant]</b> Jae-Geon was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
