--- a/index.html
+++ b/index.html
@@ -302,25 +302,25 @@
                       <li>[2025.12] </li>
                       <li><b>•  [Award]</b> <u>Jae-Geon</u> received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</li>                    
                       <li><b>•  [Award]</b> <u>Dong-Ho</u> received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
-                      <li><b>•  [Award]</b> Seung-Hwan received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
-                      <li><b>•  [Award]</b> Min-Seong received the Achievement Award (공로상) from the IEIE (대한전자공학회) Semiconductor Society.</b></li>
-                      <li><b>•  [Award]</b> Min-Seong received the Achievement Award (공로상) from the IEIE (대한전자공학회).</b></li>
+                      <li><b>•  [Award]</b> <u>Seung-Hwan</u> received the Best Student Paper Award (Bronze) from the IEEE Seoul Section.</b> </li>                    
+                      <li><b>•  [Award]</b> <u>Min-Seong</u> received the Achievement Award (공로상) from the IEIE (대한전자공학회) Semiconductor Society.</b></li>
+                      <li><b>•  [Award]</b> <u>Min-Seong</u> received the Achievement Award (공로상) from the IEIE (대한전자공학회).</b></li>
                       <li>[2025.11] </li>                      
-                      <li><b>•  [Service]</b> Min-Seong served as an Organizing Committee Member for the 2024 IEIE Fall Conference.</li>
-                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "High-Speed Interface Circuit Design" at the University of Seoul.</li>
-                      <li><b>•  [Invited Talk]</b> Seung-Hwan, Jae-Geon, Seung-Mo, Dong-Ho, and Min-Seong presented an invited talk entitled "Analog Modeling" at LX Semicon.</b></li>
-                      <li><b>•  [Invited Talk]</b> Min-Seong presented an invited talk entitled "DSP-based Wireline Communication" at Korea University (hosted by Prof. Chulwoo Kim).</li>
+                      <li><b>•  [Service]</b> <u>Min-Seong</u> served as an Organizing Committee Member for the 2024 IEIE Fall Conference.</li>
+                      <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "High-Speed Interface Circuit Design" at the University of Seoul.</li>
+                      <li><b>•  [Invited Talk]</b> <u>Seung-Hwan</u>, <u>Jae-Geon</u>, <u>Seung-Mo</u>, <u>Dong-Ho</u>, and <u>Min-Seong</u> presented an invited talk entitled "Analog Modeling" at LX Semicon.</b></li>
+                      <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "DSP-based Wireline Communication" at Korea University (hosted by Prof. Chulwoo Kim).</li>
                       <li>[2025.10] </li>                        
                       <li><b>•  [Invited Talk]</b> Prof. Seung-Hyeon Moon presented an invited talk entitled "Two Challenges in AI Accelerators," hosted by HPIC Lab.</li>
-                      <li><b>•  [Service]</b> Min-Seong served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
-                      <li><b>•  [Award]</b> Min-Seong received the KSIA Award (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
+                      <li><b>•  [Service]</b> <u>Min-Seong</u> served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
+                      <li><b>•  [Award]</b> <u>Min-Seong</u> received the KSIA Award (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                      <li><b>•  [Award]</b> Jae-Hyeon received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
-                      <li><b>•  [Award]</b> Seung-Hwan received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
-                      <li><b>•  [Award]</b> Dong-Hoe and Seung-Hwan received the Special Prize at the ISOCC 2025 Chip Design Contest.</li>
-                      <li><b>•  [Award]</b> Seung-Mo and Dong-Ho received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
-                      <li><b>•  [Service]</b> Min-Seong served on the Organizing Committee for APCCAS 2025.</li>
-                      <li><b>•  [Service]</b> Min-Seong served on the Organizing Committee for ISOCC 2025.</li>
+                      <li><b>•  [Award]</b> <u>Jae-Hyeon</u> received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
+                      <li><b>•  [Award]</b> <u>Seung-Hwan</u> received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
+                      <li><b>•  [Award]</b> <u>Dong-Hoe</u> and Seung-Hwan received the Special Prize at the ISOCC 2025 Chip Design Contest.</li>
+                      <li><b>•  [Award]</b> <u>Seung-Mo</u> and <u>Dong-Ho</u> received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
+                      <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Organizing Committee for APCCAS 2025.</li>
+                      <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Organizing Committee for ISOCC 2025.</li>
                       <li>[2025.9] </li>                        
                       <li><b>•  [Award]</b> Dong-Hyun and Shin-Uk received the Special Award at the 26th Korean Semiconductor Design Challenge.</b>
                           <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
