--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 SoC Conference.</li>
                       <li>[2025.1] </li>
                       <li><b>•  [Award]</b> <u>Sang-Hyeon</u> received the Best Paper Award (Silver Prize) at ICEIC 2025.</b></li>
-                      <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design" at ICEIC.</li>
+                      <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented a talk entitled "The Future of High-Speed Wireline: Innovations in DSP-Based Transceiver Design" at ICEIC.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as a Session Chair and on the Organizing Committee for ICEIC.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as the Executive Director (상임이사) of the Next-Generation Leader Division at the IEIE.</li>
                       
