--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                           <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging" project, sponsored by the Ministry of Science and ICT (MSIT).</b></li>
                       <li>[2025.5] </li>
-                      <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Cryogenic Superconducting Quantum Computer Readout Receiver" project, sponsored by Samsung Electronics.</b></li>         
+                      <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Cryogenic Superconducting Quantum Computer Receiver" project, sponsored by Samsung Electronics.</b></li>         
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL" has been accepted for publication in IEEE Transactions on Very Large Scale Integration (TVLSI) Systems.</b></u>
                           <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the Analog/Power IC Design Workshop.</li>
