--- a/index.html
+++ b/index.html
@@ -365,24 +365,24 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                     <ul>
-                    <li><b>[2024.11]</b> </li>
-                    <li><b>•  [Journal]</b> Our research on <b>A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-I (TCAS-I)</b></u>!
+                    <li>[2024.11] </li>
+                    <li><b>•  [Publication-Journal]</b> A paper entitled "A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC" has been accepted for publication in IEEE Transactions on Circuits and Systems I (TCAS-I).
                         <a href="https://ieeexplore.ieee.org/document/10586762" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                    <li><b>[2024.9]</b> </li>
-                    <li><b>•  [Journal]</b> Our research on <b>3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
+                    <li>[2024.9] </li>
+                    <li><b>•  [Publication-Journal]</b> A paper entitled "3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction" has been accepted for publication in IEEE Transactions on Circuits and Systems II (TCAS-II).
                         <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                                    
-                    <li><b>[2024.8]</b> </li>
-                    <li><b>•  [Conference]</b> Our research on <b>A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology</b> has been accepted for presentation at <u><b>2024 IEEE Asian Solid-State Circuits Conference (A-SSCC)</b></u>, Novemver 18-21, 2024, in Hiroshima, Japan!
+                    <li>[2024.8] </li>
+                    <li><b>•  [Publication-Conference]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology" has been accepted for presentation at the 2024 IEEE Asian Solid-State Circuits Conference (A-SSCC).
                         <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
-                    <li><b>[2024.7]</b> </li>
-                    <li><b>•  [Journal]</b> Our research on <b>High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications</b> has been accepted for publication at <u><b>Transactions on Circuits and Systmes-II (TCAS-II)</b></u>!
+                    <li>[2024.7] </li>
+                    <li><b>•  [Publication-Journal]</b> A paper entitled "High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications" has been accepted for publication in IEEE Transactions on Circuits and Systems II (TCAS-II).
                         <a href="https://ieeexplore.ieee.org/abstract/document/10614194" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
                     <li><b>[2024.4]</b> </li>
-                    <li><b>•  [Research Project]</b> "Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets" Outstanding Young Scientist Grant (우수신진연구) Project, sponsored by NRF, <b>HPIC lab.</b></li>
-                    <li><b>[2024.1]</b> </li>
-                    <li><b>•  [Award]</b> Best Paper Award (Silver Prize), 2025 ICEIC ,Congratulations, <b>Dong-Hoe.</b></li> 
-                    <li><b>•  [OC Member]</b> <b>Prof. Choo</b> has served as the Conference Secretary Chair at 2024 ICEIC</li>
-                    <li><b>•  [OC Member]</b> Organizing Committee, 2024 ASP-DAC, <b>Min-Seong</b></li>
+                    <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets" project (Outstanding Young Scientist Grant), sponsored by the National Research Foundation of Korea (NRF).</b></li>
+                    <li>[2024.1] </li>
+                    <li><b>•  [Award]</b> <u>Dong-Hoe</u> received the Best Paper Award (Silver Prize) at ICEIC 2024.</li> 
+                    <li><b>•  [Service]</b> <u>Min-Seong</u> served as the Conference Secretary Chair for ICEIC 2024.</li>
+                    <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Organizing Committee for ASP-DAC 2024.</li>
                     </ul> 
                   </div>
                 </div>
