--- a/index.html
+++ b/index.html
@@ -395,12 +395,10 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                     <ul>
-                      <li><b>[2023.12]</b> </li>
-                      <li><b>•  [Award]</b> <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CAS Student Design Contest award</b></li>
-<!--                   <li>[Dec.] <b>In-Woo Jang</b> and <b>Kyu-Lan Park</b> have been awarded <b>IEEE CAS Student Design Contest award!</b></li> -->
-                      <li><b>[2023.11]</b> </li>
-                      <li><b>•  [OC Member]</b> <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li>
-<!--               <li>[Otc.] <b>Prof. Choo</b> has served as the Technical Program Committee (TPC) at 2023 ISOCC</li> -->
+                      <li>[2023.12] </li>
+                      <li><b>•  [Award]</b> <u>In-Woo</u> and <u>Kyu-Lan Park</u> received the IEEE CAS Student Design Contest Award.</li>
+                      <li>[2023.11] </li>
+                      <li><b>•  [Service]</b> Prof. Choo served on the Technical Program Committee for ISOCC 2023.</li>
                     </ul>
                   </div>
                 </div>
