--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                       <li><b>•  [Invited Talk]</b> Prof. Seung-Hyeon Moon presented an invited talk entitled "Two Challenges in AI Accelerators," hosted by HPIC Lab.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as the Special Session Organizing Co-Chair for IEEE/IEIE ICCE-ASIA 2025.</li>
                       <li><b>•  [Award]</b> <u>Min-Seong</u> received the KSIA Award (한국반도체산업협회장상) at the 18th Semiconductor Day.</b>
-                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021190" target="_blank" rel="noopener noreferrer" class="news-link">[News Article]</a></li>
                       <li><b>•  [Award]</b> <u>Jae-Hyeon</u> received the Best Poster Award at the ISOCC 2025 Chip Design Contest.</li>
                       <li><b>•  [Award]</b> <u>Seung-Hwan</u> received the Best Paper Award from the SSCS Seoul Chapter at ISOCC 2025.</li>
                       <li><b>•  [Award]</b> <u>Dong-Hoe</u> and Seung-Hwan received the Special Prize at the ISOCC 2025 Chip Design Contest.</li>
@@ -323,9 +323,9 @@
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Organizing Committee for ISOCC 2025.</li>
                       <li>[2025.9] </li>                        
                       <li><b>•  [Award]</b> <u>Dong-Hyun</u> and <u>Shin-Uk</u> received the Special Award at the 26th Korean Semiconductor Design Challenge.</b>
-                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                  
+                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[News Article]</a></li>                  
                       <li><b>•  [Award]</b> <u>Seung-Mo</u> and <u>Dong-Ho</u> received 특허청장상 at the 26th Korean Semiconductor Design Challenge.</b>
-                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                          <a href="https://www.newshyu.com/news/articleView.html?idxno=1021299" target="_blank" rel="noopener noreferrer" class="news-link">[News Article]</a></li>
                       <li><b>•  [Grant]</b> <u>Seung-Mo</u> was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
                       <li><b>•  [Grant]</b> <u>Jae-Geon</u> was selected as a recipient of the Master's Student Research Grant from the National Research Foundation (NRF) of Korea.</b></li>
                       <li>[2025.8] </li>
@@ -338,12 +338,12 @@
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 상용반도체개발 기술워크숍.</li>
                       <li>[2025.6] </li>
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR With Autocovariance-Based Seamless Frequency Detector in 40-nm CMOS Technology" has been accepted for publication in the IEEE Journal of Solid-State Circuits (JSSC).</b></u>
-                          <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                          <a href="https://ieeexplore.ieee.org/document/11029275" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                       <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Interposer Technology with Integrated Opto-chiplets for CPO based on 2.5D Optical Packaging" project, sponsored by the Ministry of Science and ICT (MSIT).</b></li>
                       <li>[2025.5] </li>
                       <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Cryogenic Superconducting Quantum Computer Receiver" project, sponsored by Samsung Electronics.</b></li>         
                       <li><b>•  [Publication-Journal]</b> A paper entitled "A Supply Noise-Insensitive Ring DCO With a Self-Biased Shunt Regulator Array in Wide-Range Digital PLL" has been accepted for publication in IEEE Transactions on Very Large Scale Integration (TVLSI) Systems.</b></u>
-                          <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                          <a href="https://ieeexplore.ieee.org/document/11017684" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "Basics of High-Speed Wireline Communication" at the Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 Analog/Power IC Design Workshop.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 SoC Conference.</li>
@@ -367,16 +367,16 @@
                     <ul>
                     <li>[2024.11] </li>
                     <li><b>•  [Publication-Journal]</b> A paper entitled "A Compact Single-Channel 1 GS/s 8-Bit 3-Stage Capacitor Array-Assisted Charge-Injection DAC-Based SAR ADC" has been accepted for publication in IEEE Transactions on Circuits and Systems I (TCAS-I).
-                        <a href="https://ieeexplore.ieee.org/document/10586762" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                        <a href="https://ieeexplore.ieee.org/document/10586762" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                     <li>[2024.9] </li>
                     <li><b>•  [Publication-Journal]</b> A paper entitled "3.2-GHz Digital Phase-Locked Loop with Autocorrelation-based Direct Jitter Correction" has been accepted for publication in IEEE Transactions on Circuits and Systems II (TCAS-II).
-                        <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>                                    
+                        <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>                                    
                     <li>[2024.8] </li>
                     <li><b>•  [Publication-Conference]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology" has been accepted for presentation at the 2024 IEEE Asian Solid-State Circuits Conference (ASSCC).
-                        <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                        <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                     <li>[2024.7] </li>
                     <li><b>•  [Publication-Journal]</b> A paper entitled "High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications" has been accepted for publication in IEEE Transactions on Circuits and Systems II (TCAS-II).
-                        <a href="https://ieeexplore.ieee.org/abstract/document/10614194" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                        <a href="https://ieeexplore.ieee.org/abstract/document/10614194" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                     <li>[2024.4] </li>
                     <li><b>•  [Grant]</b> <u>HPIC Lab</u> were selected for the "Development of High-Speed, Low-Power, and Low-Noise Clocking Network Systems for Optical Communication Chiplets" project (Outstanding Young Scientist Grant), sponsored by the National Research Foundation of Korea (NRF).</b></li>
                     <li>[2024.1] </li>
@@ -412,7 +412,7 @@
                   <div class="user-card news-card">
                       <ul>
                         <li><b>[2022.03]</b> </li>
-                        <li><b>•  [Appointment]</b> <b>Prof. Choo</b> has been appointed Hanyang University.</li>
+                        <li><b>•  [HPIC Lab Open]</b> <u>Min-Seong</u> has been appointed to the School of Electrical Engineering at Hanyang University.</li>
 <!--                    <li>[Mar.] <b>Prof. Choo</b> has been appointed Hanyang University!</li> -->
                       </ul>
                   </div>
