--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>                                    
                     <li>[2024.8] </li>
                     <li><b>•  [Publication-Conference]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology" has been accepted for presentation at the 2024 IEEE Asian Solid-State Circuits Conference (ASSCC).
-                        <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[LINK]</a></li>
+                        <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
                     <li>[2024.7] </li>
                     <li><b>•  [Publication-Journal]</b> A paper entitled "High-Precision Built-In Phase Noise Measurement Circuit With a Hybrid ΔΣ Time-to-Digital Converter for SoC Clocking Applications" has been accepted for publication in IEEE Transactions on Circuits and Systems II (TCAS-II).
                         <a href="https://ieeexplore.ieee.org/abstract/document/10614194" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
