--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                         <a href="https://ieeexplore.ieee.org/document/10507171" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>                                    
                     <li>[2024.8] </li>
                     <li><b>•  [Publication-Conference]</b> A paper entitled "A 14-to-32-Gb/s Deadzone-Free Referenceless CDR with Autocovariance-based Frequency Detector in 40-nm CMOS Technology" has been accepted for presentation at the 2024 IEEE Asian Solid-State Circuits Conference (ASSCC).
-                        <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>
+                        <a href="https://ieeexplore.ieee.org/document/10848602" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a>
                         <a href="https://www.newshyu.com/news/articleView.html?idxno=1017521" target="_blank" rel="noopener noreferrer" class="news-link">[News Article]</a></li>
 
                     <li>[2024.7] </li>
