--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
                       <li>[2023.12] </li>
                       <li><b>•  [Award]</b> <u>In-Woo</u> and <u>Kyu-Lan Park</u> received the IEEE CAS Student Design Contest Award.</li>
                       <li>[2023.11] </li>
-                      <li><b>•  [Service]</b> Prof. Choo served on the Technical Program Committee for ISOCC 2023.</li>
+                      <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Technical Program Committee for ISOCC 2023.</li>
                     </ul>
                   </div>
                 </div>
