--- a/index.html
+++ b/index.html
@@ -283,6 +283,11 @@
                 <div class="wrapper">
                   <div class="user-card news-card">
                    <ul>
+                      <li>[2026.01] </li>
+                      <li><b>•  [Invited Talk]</b> Dr. Jae-woo Park (Sungkyunkwan University) presented an invited talk entitled "High-speed Multi-level Transceiver for Memory Interface Applications" hosted by HPIC Lab.</li>
+                      <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "100Gb/s급 디지털 인터페이스 회로 설계" at KAIST (hosted by IDEC).</li>
+                      <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "Unlocking AI's True Potential : The Critical Role of High-Speed Interfaces" at Dongguk University.</li>
+                      <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "Unlocking AI's True Potential : The Critical Role of High-Speed Interfaces" at Yonsei University.</li>
 
 
 
