--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
                       <li><b>•  [Publication-Conference]</b> A paper entitled "A 22Gb/s-54Gb/s Reconfigurable PAM-2/4/8 DSP-Based Transmitter with 14-Tap Feedforward Equalization" has been accepted at the IEEE Asian Solid-State Circuits Conference (ASSCC).</li>
                       <li><b>•  [Invited Talk]</b> <u>Min-Seong</u> presented an invited talk entitled "High-Speed Integrated Circuit Design" at the 2025 SoC Workshop.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 SoC Workshop.</li>
-                      <li>[2025.7] </li>                      
+                      <li>[2025.7] </li>
+                      <li><b>•  [Publication-Conference]</b> Analysis of Adaptive Learning Rate Strategies for Sign-Sign LMS: Stability and Speed" has been accepted at the IEEE International Technical Conference on Circuits/Systems, Computers, and Communications (ITC-CSCC).
+                          <a href="https://ieeexplore.ieee.org/document/11137667" target="_blank" rel="noopener noreferrer" class="news-link">[Paper]</a></li>                    
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served as a Session Chair and on the Organizing Committee for ITC-CSCC 2025.</li>
                       <li><b>•  [Service]</b> <u>Min-Seong</u> served on the Program Committee for the 2025 상용반도체개발 기술워크숍.</li>
                       <li>[2025.6] </li>
